# milotic

./: .env.example  .gitignore  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  LICENSE  README.md  fastmcp.json  pyproject.toml  trading_framework_architecture.md
.antigravitycli/: 2d1aff6e-abc3-426f-8ded-688299e6e693.json
.github/workflows/: ci.yml
docs/adr/: 0001-qr-based-auth-over-oauth-redirect.md  0002-per-trade-consent-via-confirmed-parameter.md
plans/: 01-v1-restructure-and-auth.md
scripts/: smoke_test.py
src/: __init__.py  config.py  server.py
src/api/: base.py  handshake.py  session.py
src/components/: __init__.py
src/components/account/: balances.py  history.py  positions.py  profile.py
src/components/market/: ohlcv.py  orderbook.py  quotes.py  search.py  ticker.py
src/components/research/: screener.py  signals.py  technicals.py
src/components/system/: system.py
src/components/trading/: margin.py  orders.py
src/milotic/: app.py  config.py  server.py
src/milotic/api/: __init__.py  base.py  handshake.py  session.py
src/milotic/components/: system.py
src/milotic/services/: account.py
src/milotic/utils/: crypto.py  (+4 more)
src/services/: __init__.py  market.py  research.py  technicals.py
src/utils/: crypto.py  decorators.py  errors.py  session.py
tests/: conftest.py  test_crypto.py  test_handshake.py  test_server.py  test_verification.py
tests/account/: test_positions.py
tests/market/: test_quotes.py
tests/research/: test_signals.py
tests/system/: test_connect.py  test_system.py
tests/trading/: test_margin.py  test_orders.py
(+16 files in other folders)
